--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hotplug-kanotix (0.5.12) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  * orphan package.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 17 Dec 2005 01:49:35 +0100
+
 hotplug-kanotix (0.5.11) unstable; urgency=low
 
   * remove cdbs auto-update feature.
